2.0/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix2
  labels:
    name: zabbix
