2.0/despliegue-de-mysql-para-zabbix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-mysql
  namespace: zabbix2
spec:
  selector:
    matchLabels:
      app: zabbix-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: zabbix-mysql
    spec:
      serviceAccountName: ebs-access-sa  # Añade esta línea para asignar la Service Account
      containers:
      - name: mysql
        image: mysql:5.7
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-storage
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: pvc-zabbix-mysql
