2.0/servicio-para-my-sql.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-mysql
  namespace: zabbix2
spec:
  type: LoadBalancer
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: zabbix-mysql
