2.0/servicio-para-zabbix-agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-agent
  namespace: zabbix2
  labels:
    app: zabbix-agent
spec:
  type: ClusterIP
  ports:
    - port: 10051
      targetPort: 10051
  selector:
    app: zabbix-agent
