2.0/servicio-para-zabbix-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  namespace: zabbix2
spec:
  ports:
    - port: 10051
      targetPort: 10051
  selector:
    app: zabbix-server
