2.0/servicio-para-zabbix-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  namespace: zabbix2
  labels:
    app: zabbix-web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30000
  selector:
    app: zabbix-web
